<resources>
    <string name="app_name">TalkAnalyzer</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_talks">Talks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_talks_actvity">TalksActvity</string>
    <string name="talk_analyzer">Talk Analyzer</string>
    <string name="by_cole">by Cole</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="navigation_drawer_imageview">navigation_drawer_imageView</string>
    <string name="title">Title</string>
    <string name="speaker">Speaker</string>
    <string name="timer">Timer</string>
    <string name="scriptures">Scriptures:</string>
    <string name="illustrations">Illustrations:</string>
    <string name="talk">Talk</string>
    <string name="num_scrip_read">Number of Scriptures read:</string>
    <string name="num_illus_used">Number of Illustrations used:</string>
    <string name="notes">Notes</string>
    <string name="overall_timing">Overall timing:</string>
    <string name="number_of_scriptures">Number of scriptures:</string>
    <string name="time_spent_on_scriptures">Time spent on scriptures:</string>
    <string name="number_of_illustrations">Number of illustrations:</string>
    <string name="time_spent_on_illustrations">Time spent on illustrations:</string>
    <string name="time_allocation">Time Allocation</string>
    <string name="home">Home</string>
    <string name="total_talks">Total number of talks analyzed:</string>
    <string name="average_timing">Average timing:</string>
    <string name="average_num_scriptures">"Average # of scriptures:"</string>
    <string name="average_scripture_timing">Avg time spent on scriptures:</string>
    <string name="average_num_illustrations">"Average # of illustrations:"</string>
    <string name="average_time_illustrations">Avg time spent on illustrations:</string>
    <string name="talk_detail_by">by:</string>
    <string name="new_talk">New Talk</string>
    <string name="talk_details">Talk Details</string>
    <string name="saved_talks">Saved Talks</string>
    <string name="temp_title">Does Your Hope Rest on Science or the Bible?</string>
    <string name="temp_speaker">Cole McCann</string>
    <string name="temp_date">01/01/2017</string>
    <string name="temp_overall_timing">30:00</string>
    <string name="temp_num_scriptures">8</string>
    <string name="temp_num_illustrations">4</string>
    <string name="unknown_speaker">Unknown Speaker</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="zero">0</string>
    <string name="talk_timer">Talk Timer</string>
    <string name="done">Done</string>
    <string name="frag_2_title">%1$s by: %2$s</string>
    <string name="talk_saved">Talk Saved</string>
    <string name="select_talk_type">Select Talk Type</string>
    <string name="public_type">Public</string>
    <string name="other_type">Other</string>
    <string name="all_type">All</string>
    <string name="add_talk_button">add talk button</string>
    <string name="talks_analyzed">"Talks Analyzed: "</string>
</resources>
