<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.captainmccann.talkanalyzer.talkDetail.TalkDetailFragment">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/temp_title"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_by"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/talk_detail_title"
            android:text="@string/talk_detail_by"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_speaker"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/talk_detail_by"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/temp_speaker"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/talk_detail_speaker"
            tools:text="@string/temp_date"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_type"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/talk_detail_date"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            tools:text="Public" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/overall_timing"
            app:layout_constraintTop_toBottomOf="@+id/talk_detail_type"
            android:layout_marginTop="16dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            app:layout_constraintGuide_begin="193dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="193dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/number_of_scriptures" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:text="@string/number_of_illustrations"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_timing"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            tools:text="@string/temp_overall_timing"
            app:layout_constraintTop_toBottomOf="@+id/talk_detail_type"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_number_of_scriptures"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="@string/temp_num_scriptures" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_number_of_illustrations"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            tools:text="@string/temp_num_illustrations"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/talk_detail_notes"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            tools:text="Notes"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:layout_marginTop="24dp" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>