<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.captainmccann.talkanalyzer.stats.StatsFragment">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/guideline7"
        app:layout_constraintGuide_begin="211dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="211dp" />

    <Spinner
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:id="@+id/stats_spinner"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:text="@string/total_talks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:text="@string/average_timing" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:text="@string/average_num_scriptures" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:text="@string/average_num_illustrations"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:id="@+id/guideline8"
        app:layout_constraintGuide_begin="116dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="116dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stats_total_talks"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView14"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stats_avg_timing"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stats_total_talks"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stats_avg_scrip_count"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintLeft_toRightOf="@+id/textView16"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stats_avg_illus_count"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

</android.support.constraint.ConstraintLayout>
