<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:text="@string/talk_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/view"
        android:layout_marginBottom="8dp" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_chrono"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@+id/main_start_stop_button"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/main_start_stop_button"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView1"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:id="@+id/main_start_stop_button"
        app:layout_constraintRight_toLeftOf="@+id/main_reset_button"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        android:layout_marginBottom="8dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:id="@+id/main_reset_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        android:layout_marginBottom="8dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/view"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="24dp" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="121dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="121dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:text="@string/scriptures"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/view2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:text="@string/illustrations"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:id="@+id/view3"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:layout_marginTop="64dp" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/new_talk_notes"
        android:hint="@string/notes"
        app:layout_constraintTop_toTopOf="@+id/view3"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:gravity="top"
        android:layout_marginTop="16dp" />

    <Button
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_scripture_add_button"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        app:layout_constraintRight_toLeftOf="@+id/main_scripture_subtract_button"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_scripture_subtract_button"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_illustration_add_button"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        app:layout_constraintRight_toLeftOf="@+id/main_illustration_subtract_button"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_illustration_subtract_button"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_illustration_counter"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/main_illustration_add_button"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/main_illustration_add_button"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_scripture_counter"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="@+id/main_scripture_add_button"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/main_illustration_counter" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_2_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Why Would a Loving God Permit Wickedness? by Cole McCann"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>